--- a/services.html
+++ b/services.html
@@ -298,7 +298,7 @@
         <h4>Επικοινωνία</h4>
         <ul class="footer-links">
           <li>Οδυσσέως και Ζακύνθου 1<br>14452 Μεταμόρφωση, Αττική</li>
-          <li><a href="tel:+302102849240">210 2849240-3</a></li>
+          <li><a href="tel:+302102849240">210 2849240</a></li>
           <li><a href="mailto:info@autofrigo.gr">info@autofrigo.gr</a></li>
         </ul>
       </div>
@@ -306,7 +306,7 @@
 
     <div id="gemh" class="footer-bottom">
       <div class="container footer-bottom-inner">
-        <span>© 2025 Autofrigo Trans Ltd. Με την επιφύλαξη παντός δικαιώματος.</span>
+        <span>© 2025 Autofrigo Trans Ltd. All rights reserved.</span>
         <span>Πιστοποιήσεις: ISO 22000:2018 | ISO 9001:2015</span>
       </div>
     </div>
