--- a/gemh.html
+++ b/gemh.html
@@ -151,7 +151,7 @@
                   </tr>
                   <tr>
                     <th>Λήξη 1ης διαχειριστικής περιόδου</th>
-                    <td>31/12/2009</td>
+                    <td>31/12/2010</td>
                   </tr>
                   <tr>
                     <th>Κεφάλαιο Εταιρείας</th>
@@ -187,10 +187,10 @@
                     <td>ΚΕΦΟΔΕ ΑΤΤΙΚΗΣ</td>
                     <td>ΜΑΓΓΙΝΑΣ ΑΝΤΩΝΙΟΣ</td>
                     <td>17/03/2009</td>
-                    <td>Διαχειριστής</td>
+                    <td>ΜΕΛΟΣ</td>
                   </tr>
                   <tr>
-                    <td>000000001</td>
+                    <td>045659883</td>
                     <td>ΚΕΦΟΔΕ ΑΤΤΙΚΗΣ</td>
                     <td>ΜΑΓΓΙΝΑ ΜΑΡΙΑ</td>
                     <td>17/03/2009</td>
