--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           </div>
         </div>
 
-        <a href="contact.html" class="btn btn-outline">Μάθετε Περισσότερα</a>
+        <a href="about.html" class="btn btn-outline">Μάθετε Περισσότερα</a>
       </div>
     </div>
   </section>
